np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-01
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: n1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: n2
    ports:
    - protocol: TCP
      port: 80
